--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: >- # used by seo meta and the atom feed
   발전을 꿈꾸는 사람입니다. 아직 잘하지는 못하지만, 조금씩 앞으로 나아가려고 노력 중입니다.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: 'https://redcarrot1.github.io'
+url: https://redcarrot1.github.io
 
 github:
   username: redcarrot1 # change to your github username
