--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ social:
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
 
-google_site_verification: # fill in to your verification string
+google_site_verification: zEHPjqwmEvm9XOGZfi3UlGEPZIHLJ-cstqpLqvx11Qo # fill in to your verification string
 
 # ↑ --------------------------
 # The end of `jekyll-seo-tag` settings
